kubernetes-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dotnetdocker-app-deployment
  labels:
    app: dotnetdocker-app
  namespace: sk
spec:
  replicas: 2
  selector:
    matchLabels:
      app: dotnetdocker-app
  template:
    metadata:
      labels:
        app: dotnetdocker-app
    spec:
      containers:
      - name: dotnetdocker-app
        image: dotnetdocker-app:6.0.20
        ports:
        - containerPort: 5000
