kubernetes-service.yml
apiVersion: v1
kind: Service
metadata:
  name: dotnetdocker-app
  namespace: default
spec:
  selector:
    app: dotnetdocker-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9376
